--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,8 @@
  font-style: italic;
  font-size: 20px;
  margin: 20px 150px;
- text-align: center;   
+ text-align: center;
+ margin-top: 1px;   
 }
 .images-1{
 /* transition: all 2s Fast Out, Linear In 0s; */
